<resources>
    <!--    AppName  -->
    <string name="app_name">Clean City</string>

    <!-- Shared Preferences -->
    <string name="sharedPreferences_file_key" translatable="false">sharedPreferencesFile</string>

    <!--    Main_Page  -->
    <string name="mainPage_username">Username</string>
    <string name="mainPage_password">Password</string>
    <string name="mainPage_buttonLogin">Login</string>
    <string name="mainPage_buttonRegistar">Register</string>
    <string name="mainPage_buttonNotas">Notes</string>
    <string name="mainPage_checkboxTerms">I agree to the Terms and Conditions</string>
    <string name="mainPage_checkboxRememberMe">Remember me?</string>

    <!--    Notes_Page Toolbar  -->
    <string name="notesPage_ActionBarTitle">Personal Notes</string>
    <string name="notesPage_ActionBarAdd">Add Note</string>

    <!--    ReciclerView  -->
    <string name="textViewReciclerView_Subject">Subject: </string>
    <string name="textViewReciclerView_Street">Street: </string>
    <string name="textViewReciclerView_Locality">Locality: </string>
    <string name="textViewReciclerView_PostalCode">Postal-Code: </string>
    <string name="textViewReciclerView_Date">Date: </string>
    <string name="textViewReciclerView_Observations">Observations: </string>

    <!--    AddNotes_Page Toolbar  -->
    <string name="addNotesPage_ActionBarTitle">Add Note</string>

    <!--    AddNotes_Page TextViews  -->
    <string name="textViewAddNotesPage_Subject">Subject</string>
    <string name="textViewAddNotesPage_Street">Street</string>
    <string name="textViewAddNotesPage_Locality">Locality</string>
    <string name="textViewAddNotesPage_PostalCode">Postal-Code</string>
    <string name="textViewAddNotesPage_Date">Date</string>
    <string name="textViewAddNotesPage_Observations">Observations</string>

    <!--    AddNotes_Page EditTexts  -->
    <string name="editTextsAddNotesPage_Subject">Insert Subject</string>
    <string name="editTextsAddNotesPage_Street">Street Address</string>
    <string name="editTextsAddNotesPage_Locality">District/City</string>

    <!--    AddNotes_Page Save Button  -->
    <string name="saveButtonAddNotesPage">Save</string>


    <!--    AddNotes_Page Toast  -->
    <string name="toastFailAddNotesPage">Note not added, missing information</string>
    <string name="toastSuccessAddNotesPage">Note added successfully</string>

    <!--    EditNotes_Page Toolbar  -->
    <string name="editNotesPage_ActionBarTitle">Edit Note</string>


    <!--    EditNotes_Page Toasts -->
    <string name="editNotesPage_NoteEditedSuccessfully">Note Edited Successfully</string>
    <string name="editNotesPage_NoteEditedFail">Note not edited, missing Information</string>

    <!-- Login Toasts-->
    <string name="loginMissingFields">Fill all the fields!</string>
    <string name="loginWrongCredentials">Invalid credentials</string>
    <string name="loginSuccessful">Login Successful</string>


    <!-- Register-->
    <string name="registerFirstName">First Name</string>
    <string name="registerLastName">Last Name</string>
    <string name="registerEmail">Email</string>
    <string name="registerPassword">Password</string>
    <string name="registerPasswordVerify">Verify Password</string>
    <string name="registerPasswordDontMatch">Passwords don\'t match</string>
    <string name="registerMissingCheckbox">Check the checkbox!</string>
    <string name="registerSuccesfull">The Register was successful</string>
    <string name="registerNotSuccesfull">The Register was not successful</string>
    <string name="title_activity_maps">Map</string>

    <!-- Add Ocorrency -->
    <string name="addOcorrencyToolbarTitle">Add a occurrence</string>
    <string name="addOcorrencyChooseCategory">Choose the category</string>
    <string name="addOcorrencyCategory">Category</string>
    <string name="addOcorrencyChooseSubCategory">Choose the subCategory</string>
    <string name="addOcorrencySubCategory">SubCategory</string>
    <string name="addOcorrencyPointOfReference">Add a near Point of reference</string>
    <string name="addOcorrencyDescription">Write a description of the Occurrence</string>

    <string name="addOcorrencyEditTextPointOfReference">Point of reference</string>
    <string name="addOcorrencyEditTextDescription">Description</string>

    <string name="buttonAddOcorrenceBack">Back</string>
    <string name="buttonAddOcorrenceNext">Next</string>

    <string name="addOcorrenyStreetName">Street Name</string>
    <string name="addOcorrenyStreetNameDescription">Write the street name</string>

    <!-- List My Ocorrences -->
    <string name="myOcorrencesToolbarTitle">My Own Occurrences</string>
</resources>
