<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOcorrency">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addOcorrencyToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="@string/addOcorrencyToolbarTitle"
        app:titleTextColor="@color/white" />


    <TextView
        android:id="@+id/textViewChooseCategory"
        android:layout_width="160dp"
        android:layout_height="21dp"
        android:text="@string/addOcorrencyChooseCategory"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewReferencePoint"
        app:layout_constraintStart_toStartOf="@+id/textViewReferencePoint"
        app:layout_constraintTop_toBottomOf="@+id/addOcorrencyToolbar" />

    <TextView
        android:id="@+id/textViewReferencePoint"
        android:layout_width="160dp"
        android:layout_height="23dp"
        android:text="@string/addOcorrencyChooseSubCategory"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextStreetName"
        app:layout_constraintStart_toStartOf="@+id/textViewStreetName"
        app:layout_constraintTop_toBottomOf="@+id/textViewChooseCategory" />

    <Button
        android:id="@+id/buttonAddOcorrenceBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddOcorrenceBack"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAddOcorrenceNext"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddOcorrenceNext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonAddOcorrenceNext"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonAddOcorrenceNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAddOcorrenceNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonAddOcorrenceBack"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        app:layout_constraintVertical_bias="0.656" />

    <EditText
        android:id="@+id/editTextPointOfReference"
        android:layout_width="249dp"
        android:layout_height="75dp"
        android:ems="10"
        android:hint="@string/addOcorrencyEditTextPointOfReference"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
        app:layout_constraintStart_toStartOf="@+id/textViewAddDescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextStreetName" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="269dp"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/addOcorrencyEditTextDescription"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddOcorrenceBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPointOfReference" />

    <TextView
        android:id="@+id/textViewAddDescription"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:text="@string/addOcorrencyDescription"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="@+id/editTextDescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextPointOfReference"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewStreetName"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:text="@string/addOcorrenyStreetName"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextStreetName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextStreetName"
        app:layout_constraintTop_toBottomOf="@+id/textViewReferencePoint"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextStreetName"
        android:layout_width="249dp"
        android:layout_height="75dp"
        android:ems="10"
        android:hint="@string/addOcorrenyStreetNameDescription"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextPointOfReference"
        app:layout_constraintStart_toStartOf="@+id/textViewAddPointOfReference"
        app:layout_constraintTop_toBottomOf="@+id/textViewReferencePoint" />


    <TextView
        android:id="@+id/textViewAddPointOfReference"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:text="@string/addOcorrencyPointOfReference"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextPointOfReference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPointOfReference"
        app:layout_constraintTop_toBottomOf="@+id/editTextStreetName"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewChooseCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewChooseCategory"
        app:layout_constraintTop_toTopOf="@+id/textViewChooseCategory">

        <AutoCompleteTextView
            android:id="@+id/categoryDropdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:text="@string/addOcorrencyCategory"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewReferencePoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewReferencePoint"
        app:layout_constraintTop_toTopOf="@+id/textViewReferencePoint">

        <AutoCompleteTextView
            android:id="@+id/SubCategoryDropdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:text="@string/addOcorrencySubCategory"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>