<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#60A6FF85"
    tools:context=".Register">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registerToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="@string/mainPage_buttonRegistar"
        app:titleMargin="0dp"
        app:titleTextColor="@android:color/white" />

    <EditText
        android:id="@+id/editTextRegisterUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mainPage_username"
        android:inputType="textPersonName|text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterFirstName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterFirstName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30" />

    <EditText
        android:id="@+id/editTextRegisterFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registerFirstName"
        android:inputType="textPersonName|text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterLastName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterLastName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <EditText
        android:id="@+id/editTextRegisterLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registerLastName"
        android:inputType="textPersonName|text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterEmail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registerEmail"
        android:inputType="textPersonName|textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registerPassword"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterPasswordVerification"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterPasswordVerification"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <EditText
        android:id="@+id/editTextRegisterPasswordVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/registerPasswordVerify"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/registerCheckBox"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/registerCheckBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/registerButtonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainPage_buttonRegistar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896" />

    <ImageView
        android:id="@+id/imageViewRegisterLocation"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registerImageViewLogin"
        app:layout_constraintTop_toBottomOf="@+id/registerButtonRegister"
        app:layout_constraintVertical_bias="0.797"
        app:srcCompat="@drawable/ic_action_location" />

    <ImageView
        android:id="@+id/registerImageViewLogin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="165dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewRegisterLocation"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButtonRegister"
        app:layout_constraintVertical_bias="0.797"
        app:srcCompat="@drawable/ic_action_location"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/imageViewLogotipo"
        android:layout_width="225dp"
        android:layout_height="195dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        app:srcCompat="@drawable/logo_transparent" />

    <CheckBox
        android:id="@+id/registerCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/mainPage_checkboxTerms"
        app:layout_constraintBottom_toTopOf="@+id/registerButtonRegister"
        app:layout_constraintEnd_toEndOf="@+id/registerButtonRegister"
        app:layout_constraintStart_toStartOf="@+id/registerButtonRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPasswordVerification"
        app:layout_constraintVertical_bias="0.78" />

</androidx.constraintlayout.widget.ConstraintLayout>



